# Internet-accelerator

./: .gitignore  README.md  deploy.sh
panel/: .env.example  Caddyfile  Dockerfile  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
panel/alembic/: env.py
panel/alembic/versions/: 0001_initial.py  0002_subscription_last_seen.py
panel/app/: config.py  db.py  i18n.py  main.py  security.py  seed.py  web.py  web_admin.py
panel/app/api/: admin_nodes.py  admin_plans.py  admin_provision.py  admin_subscriptions.py  admin_users.py  auth.py  subscription.py  user_dashboard.py
panel/app/models/: __init__.py  node.py  plan.py  subscription.py  traffic_log.py  user.py
panel/app/schemas/: auth.py  node.py  plan.py  provision.py  subscription.py
panel/app/services/: billing.py  node_allocator.py  provisioner.py  relay_config.py  subscription_builder.py  subscription_factory.py  traffic_collector.py  xray_local.py
panel/app/templates/: base.html  dashboard.html  login.html
panel/app/templates/admin/: _icons.html  base.html  dashboard.html  node_edit.html  nodes.html  plans.html  provision.html  subscription_edit.html  subscriptions.html  user_edit.html  users.html
panel/app/workers/: tasks.py
panel/proto/: README.md
panel/scripts/: bootstrap_node.sh  install_panel.sh
