[project]
name = "vpn-panel"
version = "0.1.0"
description = "VPN service panel with central relay (XRay-core) and Happ-compatible subscriptions"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic[email]>=2.9",
  "pydantic-settings>=2.6",
  "sqlalchemy[asyncio]>=2.0.36",
  "alembic>=1.14",
  "asyncpg>=0.30",
  "redis>=5.2",
  "arq>=0.26",
  "bcrypt>=4.2",
  "python-jose[cryptography]>=3.3",
  "python-multipart>=0.0.12",
  "jinja2>=3.1",
  "asyncssh>=2.18",
  "grpcio>=1.68",
  "grpcio-tools>=1.68",
  "protobuf>=5.28",
  "httpx>=0.28",
  "qrcode[pil]>=8.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.8",
  "mypy>=1.13",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
